added auth in frontend

--- a/frontend/public/locales/en/translation.json
+++ b/frontend/public/locales/en/translation.json
@@ -1,12 +1,32 @@
 {
   "home": "Home",
   "about": "About",
-  "login": "Login",
+  "login": "Log In",
+  "register": "Sign Up",
+  "logout": "Log Out",
+  "loggedInAs": "Logged in as: {{username}}",
   "toggleTheme": "Toggle theme",
-  "backendMessageTitle": "Message from the backend",
+  "backendMessageTitle": "Message from the Backend",
   "loadingMessage": "Loading message...",
   "fetchError": "Failed to fetch message from backend.",
   "aboutTitle": "About Us",
-  "aboutContent": "This is the about page content.",
-  "aboutExtra": "It lives inside the main container defined in App.tsx."
+  "aboutContent": "This is the content of the about page.",
+  "aboutExtra": "It lives inside the main container defined in App.tsx.",
+  "homePageTitle": "Welcome to the Home Page",
+  "notLoggedInMessage": "You are not logged in. Please log in below.",
+  "usernamePlaceholder": "Username",
+  "passwordPlaceholder": "Password",
+  "confirmPasswordPlaceholder": "Confirm Password",
+  "loginButton": "Log In",
+  "registerButton": "Sign Up",
+  "loginPageTitle": "Log In",
+  "registerPageTitle": "Register",
+  "registerSuccess": "Registration successful! You are now logged in.",
+  "registerFailed": "Registration failed. Please try again.",
+  "passwordsDoNotMatch": "Passwords do not match.",
+  "loginFailed": "Login failed. Please check your credentials.",
+  "usernameRequired": "Username is required.",
+  "passwordRequired": "Password is required.",
+  "welcomeMessage": "Welcome to our application!",
+  "errorOccurred": "An error occurred. Please try again later."
 }
