--- a/frontend/public/locales/fr/translation.json
+++ b/frontend/public/locales/fr/translation.json
@@ -1,12 +1,32 @@
 {
   "home": "Accueil",
   "about": "À Propos",
-  "login": "Connexion",
+  "login": "Se Connecter",
+  "register": "S'inscrire",
+  "logout": "Se Déconnecter",
+  "loggedInAs": "Connecté en tant que : {{username}}",
   "toggleTheme": "Changer de thème",
-  "backendMessageTitle": "Message du backend",
+  "backendMessageTitle": "Message du Serveur",
   "loadingMessage": "Chargement du message...",
-  "fetchError": "Échec de la récupération du message du backend.",
+  "fetchError": "Échec de la récupération du message du serveur.",
   "aboutTitle": "À Propos de Nous",
-  "aboutContent": "Ceci est le contenu de la page à propos.",
-  "aboutExtra": "Il se trouve dans le conteneur principal défini dans App.tsx."
+  "aboutContent": "Ceci est le contenu de la page À propos.",
+  "aboutExtra": "Il se trouve dans le conteneur principal défini dans App.tsx.",
+  "homePageTitle": "Bienvenue sur la Page d'Accueil",
+  "notLoggedInMessage": "Vous n'êtes pas connecté. Veuillez vous connecter ci-dessous.",
+  "usernamePlaceholder": "Nom d'utilisateur",
+  "passwordPlaceholder": "Mot de passe",
+  "confirmPasswordPlaceholder": "Confirmez le mot de passe",
+  "loginButton": "Se Connecter",
+  "registerButton": "S'inscrire",
+  "loginPageTitle": "Se Connecter",
+  "registerPageTitle": "S'inscrire",
+  "registerSuccess": "Inscription réussie ! Vous êtes maintenant connecté.",
+  "registerFailed": "Échec de l'inscription. Veuillez réessayer.",
+  "passwordsDoNotMatch": "Les mots de passe ne correspondent pas.",
+  "loginFailed": "Échec de la connexion. Veuillez vérifier vos identifiants.",
+  "usernameRequired": "Le nom d'utilisateur est requis.",
+  "passwordRequired": "Le mot de passe est requis.",
+  "welcomeMessage": "Bienvenue dans notre application !",
+  "errorOccurred": "Une erreur s'est produite. Veuillez réessayer plus tard."
 }
